--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,163 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#last {
+  border: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+html {
+  height: 100%;
+}
+#root{
+  height: 100%;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  animation: 1s fadein 0.5 forwards;
+  opacity: 0;
+
+
+}
+
+.bg {
+  background-size: cover;
+  background: url('./utils/background7.jpg') no-repeat  center center fixed;
+  background-position: center;
+  height: 100%;
+}
+
+.header{
+  /*120-->*/
+  margin-top: 120px; 
+  padding-bottom: 10px;
+  color: white;
+  -webkit-text-stroke-color: #939191;
+  -webkit-text-stroke-width: 1px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 90px;
+  font-weight: 599;
+  align-self: center; 
+  
+
+}
+
+.header h1{
+  font-family: 'Poppins', sans-serif;
+  
+  font-weight: 200;
+}
+
+.form {
+  align-self: center;
+  display: flex;
+  align-items: flex-end;
+
+}
+
+.searchBar {
+  border-radius: 2px;
+  height: 30px;
+  width: 350px;
+  border: 0;
+  padding-left: 10px;
+
+}
+
+.bten {
+  background-color: #F2C94C;
+  height: 32px;
+  border-radius: 2px;
+  width: 35px;
+
+  border: 0;
+}
+
+.resBox {
+  align-self: center;
+  background-color: black;
+  opacity: 0; /*0.7*/
+  height: 170px;
+  width: 600px;
+  margin-top: 10px;
+  border-radius: 24px;
+ 
+}
+
+.forecast {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  height: 170px;
+  width: 600px;
+  margin-top: -170px;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+ opacity: 0;
+  z-index: 2;
+}
+
+.temp {
+  display: flex;
+  flex-direction: row;
+  opacity: 0;
+  
+}
+
+.tmp-val {
+  margin-right: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-right: solid white;
+  padding-right: 25px;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.hid {
+  opacity: 0;
+}
+
+.move-up {
+  transform: translateY(-90px);
+  transition-duration: 1s;
+}
+.fade {
+  animation: 1s fadein 0.5 forwards;
+}
+
+.fade2 {
+  animation: 1s fadein2 0.5 forwards;
+}
+
+.material-icons.md-48 { font-size: 70px;  }
+.ic{
+  margin-top: 10px;
+}
+.sic {
+  color:#434e52;
+}
+
+
+
+@keyframes fadein {
+  100% {
+    opacity: 100;
+  }
+}
+
+@keyframes fadein2 {
+  100% {
+    opacity: 0.7;
+  }
 }
